# rectangleMadness

./: .gitignore  Cargo.toml  Makefile  readme.md
src/: auxiliary.rs  canvas.rs  horizontalizer.rs  main.rs  output.rs  point.rs  rectangle.rs  tests.rs
